--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
 	"version": "5.0.0",
 	"license": "proprietary",
 	"require": {
-        "laravel/nova": "^5.0"
+        "laravel/nova": "^4.0|^5.0"
 	},
 	"autoload": {
 		"psr-4": {
