--- a/composer.json
+++ b/composer.json
@@ -2,10 +2,10 @@
 	"name": "wamesk/laravel-nova-sticky-actions",
 	"description": "Laravel Nova Sticky Actions",
 	"type": "library",
-	"version": "5.0.1",
+	"version": "5.0.2",
 	"license": "proprietary",
 	"require": {
-        "laravel/nova": "^4.0|^5.0"
+        "laravel/nova": "^5.0"
 	},
 	"autoload": {
 		"psr-4": {
